[package]
name = "config"
version = "0.1.1"
description = "A library to parse and load configuration files"
authors = ["Filipe Gonçalves <filipe@codinghighway.com>"]
license = "MIT"
keywords = ["conf", "config", "configuration", "libconfig", "json"]
documentation = "http://filipegoncalves.github.io/rust-config/config/"
homepage = "https://github.com/filipegoncalves/rust-config"
repository = "https://github.com/filipegoncalves/rust-config"
readme = "README.md"

[dependencies]
nom = "~0.3.0"
